Rerouted study mode to flip and renamed files

--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -86,7 +86,7 @@
             </div>
             <div class="mdl-grid">
                 <div class="mdl-cell mdl-cell--8-col">
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="window.location='sample_card.html';">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="window.location='sample_stack_view.html';">
                         Submit Stack
                     </button>
                 </div>
