--- a/skeleton_html/my_shelf.html
+++ b/skeleton_html/my_shelf.html
@@ -57,7 +57,7 @@
                     <td>(Calculated Value)</td>
                     <td>
                         <button class="mdl-button mdl-js-button mdl-button--primary">
-                            <a href="sample_card.html"><i class="material-icons">visibility</i></a>
+                            <a href="sample_stack_view.html"><i class="material-icons">visibility</i></a>
                         </button>
                     </td>
 
