--- a/skeleton_html/sample_stack_view.html
+++ b/skeleton_html/sample_stack_view.html
@@ -14,7 +14,7 @@
             mdl-layout--fixed-header">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Shows A Close Up Of A Stack</span>
+            <span class="mdl-layout-title">Biology</span>
             <div class="mdl-layout-spacer"></div>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='create_deck.html';">
                 Create New Stack
@@ -97,7 +97,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
-                    <a href="page09.html" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                    <a href="single_stack_study_mode.html" class="mdl-button mdl-js-button mdl-js-ripple-effect">
                         Study
                     </a>
                 </div>
