--- a/skeleton_html/returning_user.html
+++ b/skeleton_html/returning_user.html
@@ -58,7 +58,7 @@
           </span>
         </span>
         <span class="mdl-list__item-secondary-content">
-          <a class="mdl-list__item-secondary-action" href="sample_card.html"><i class="material-icons">visibility</i></a>
+          <a class="mdl-list__item-secondary-action" href="sample_stack_view.html"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
                 <li class="mdl-list__item mdl-list__item--three-line">
@@ -73,7 +73,7 @@
           </span>
         </span>
                     <span class="mdl-list__item-secondary-content">
-          <a class="mdl-list__item-secondary-action" href="sample_card.html"><i class="material-icons">visibility</i></a>
+          <a class="mdl-list__item-secondary-action" href="sample_stack_view.html"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
             </ul>
