--- a/skeleton_html/single_stack_study_mode.html
+++ b/skeleton_html/single_stack_study_mode.html
@@ -5,40 +5,14 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <style>
-        .mdl-card.mdl-shadow--2dp {
-            width: 100%;
-            height: 100%;
-            transition: transform 5s;
-            transform-style: preserve-3d;
-            -webkit-transform-origin: 50% 50%;
-        }
-        .mdl-card > .mdl-card__title {
-            color: #fff;
-            height: 176px;
-            background: #2962FF;
-        }
-        body {
-            padding: 20px;
-            background: #fafafa;
-            position: relative;
-        }
+    <link rel="stylesheet" href="../skeleton_css/study_mode.css">
 
-        #questionCard {
-            display: block;
-
-        }
-
-        #answerCard {
-            display: none
-        }
-    </style>
-    <script src="../stack_card_overview.js"></script>
 </head>
 <body>
+
 <!-- Question card that fills the screen -->
 <div class="mdl-card mdl-shadow--2dp" id="questionCard">
-    <div class="mdl-card__title" id="title">
+    <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">
             How do I do taxes?
         </h2>
@@ -61,5 +35,6 @@
     </div>
 </div>
 
+<script src="../skeleton_js/study_mode.js"></script>
 </body>
 </html>
