--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -33,7 +33,7 @@
         <div class="mdl-layout__drawer">
             <span class="mdl-layout__title">Create Deck</span>
             <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="returning_user.html">Home</a>
+                <a class="mdl-navigation__link" href="home.html">Home</a>
                 <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
                 <a class="mdl-navigation__link" href="my_shelf.html">My Shelf</a>
                 <a class="mdl-navigation__link" href="search_page.html">Search</a>
