--- a/skeleton_html/login.html
+++ b/skeleton_html/login.html
@@ -30,7 +30,7 @@
     </div>
 </form>
 
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='returning_user.html';">Login</button>
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='home.html';">Login</button>
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='reg.html'">Register</button>
 
 </body>
