--- a/skeleton_html/single_card_study.html
+++ b/skeleton_html/single_card_study.html
@@ -1,77 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Card Study Mode</title>
+    <!-- Material Design Lite -->
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css">
-    <script
-            src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
-    <style>
-        .container {
-            width: 100vw;
-            height: 90vh;
-        }
-        .card {
-            width: 100%;
-            height: 100%;
-            transition: transform 3s;
-            transform-style: preserve-3d;
-            -webkit-transform-origin: 50% 50%;
-        }
-        .card div {
-            display: block;
-            height: 100%;
-            width: 100%;
-            line-height: 1000%;
-            color: white;
-            text-align: center;
-            font-weight: bold;
-            font-size: 4em;
-            position: absolute;
-            backface-visibility: hidden;
-        }
-        .card .front {
-            background: lightskyblue;
-        }
-        .card .back {
-            background: lightskyblue;
-            transform: rotateY( 180deg );
-        }
-        .card.flipped {
-            transform: rotateY( 180deg );
-        }
-        @media screen and (orientation: landscape) {
-            .card div {
-                line-height: 500%;
-            }
-        }
-    </style>
-    <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
-    <script>
-        function flip() {
-            $('.card').toggleClass('flipped');
-        }
-    </script>
-
+    <link rel="stylesheet" href="../skeleton_css/study_mode.css">
 </head>
 <body>
-<div class="container">
-    <div class="card">
-        <div class="front" onclick="flip()">Question</div>
-        <div class="back" onclick="flip()">Answer</div>
-    </div>
-    </div>
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Right</button>
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Wrong</button>
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">Next Card</button>
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='sample_stack_view.html';">Return</button>
-</div>
 
+<!-- Question card that fills the screen -->
+<div class="mdl-card mdl-shadow--2dp " id="questionCard">
+    <div class="mdl-card__title" id="title">
+        <h2 class="mdl-card__title-text " id="question">
+            How do I do taxes?
+        </h2>
+        <h2 class="mdl-card__title-text " id="answer">
+            Worry not, for the mitochondria is the powerhouse of the cell.
+        </h2>
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+    </div>
+    <div class="mdl-card__menu">
+    </div>
+</div>
+<script src="../skeleton_js/study_mode.js"></script>
 </body>
 </html>
-
-
