--- a/skeleton_html/single_stack_study_mode.html
+++ b/skeleton_html/single_stack_study_mode.html
@@ -5,27 +5,16 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="../skeleton_css/study_mode.css">
-
 </head>
 <body>
 
 <!-- Question card that fills the screen -->
-<div class="mdl-card mdl-shadow--2dp" id="questionCard">
-    <div class="mdl-card__title">
-        <h2 class="mdl-card__title-text">
+<div class="mdl-card mdl-shadow--2dp " id="questionCard">
+    <div class="mdl-card__title mdl-card--expand" id="title">
+        <h2 class="mdl-card__title-text" id="question">
             How do I do taxes?
         </h2>
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-    </div>
-    <div class="mdl-card__menu">
-    </div>
-</div>
-<!-- Question card that fills the screen -->
-<div class="mdl-card mdl-shadow--2dp" id="answerCard">
-    <div class="mdl-card__title" id="title">
-        <h2 class="mdl-card__title-text">
+        <h2 class="mdl-card__title-text " id="answer">
             Worry not, for the mitochondria is the powerhouse of the cell.
         </h2>
     </div>
@@ -35,6 +24,5 @@
     </div>
 </div>
 
-<script src="../skeleton_js/study_mode.js"></script>
 </body>
 </html>
