checks against pw and navs to the proper html page

--- a/skeleton_html/login.html
+++ b/skeleton_html/login.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <h1>Flash Cards</h1>
-<form action="/login" method="post">
+<form action="/api/login" method="post">
     <i class="material-icons">account_circle</i>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <input class="mdl-textfield__input" type="text" id="userName" name="username">
