consolidated files in 3 main folders

--- a/skeletons/skeleton_html/single_card_study.html
+++ b/skeletons/skeleton_html/single_card_study.html
@@ -24,6 +24,6 @@
     <div class="mdl-card__menu">
     </div>
 </div>
-<script src="../skeleton_js/study_mode.js"></script>
+<script src="../skeletons/skeleton_js/study_mode.js"></script>
 </body>
 </html>
